# templates

./: README.md  init.sh  vercel.json
.github/workflows/: deploy.yml
common/changelog/: CHANGELOG.md
common/readme/: README.md
t/golang/: LICENSE  init.sh
t/java/: .editorconfig  init.sh  pom.xml
t/python/: _init.sh  init.sh  pyproject.toml  requirements-dev.txt  tox.ini
