[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<PACKAGE_NAME>"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Environment :: Console",                                      # TODO: possibly remove
    "Development Status :: 5 - Production/Stable",                 # TODO: possibly change
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",                      # TODO: possibly update
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",                  # TODO: possibly remove
    "Topic :: Software Development",
    "Topic :: Utilities",                                          # TODO: possibly remove
    "Typing :: Typed",
]
dependencies = []
keywords = []
[[project.authors]]
name = "4MBL"

[project.license]
file = "LICENSE"

[project.scripts]

[project.urls]
Homepage = "https://github.com/4mbl/<REPO>"                          # TODO: update
"Bug Tracker" = "https://github.com/4mbl/<REPO>/issues"              # TODO: update
Changelog = "https://github.com/4mbl/<REPO>/blob/main/CHANGELOG.md"  # TODO: update
Documentation = "https://github.com/4mbl/<REPO>/blob/main/README.md" # TODO: update
Repository = "https://github.com/4mbl/<REPO>"                        # TODO: update

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "ISC001", "COM812"]
exclude = ["tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
